Fixed text overflowing in productDisplay component

--- a/client/viteReact/src/stylesheets/Productdisplay.module.css
+++ b/client/viteReact/src/stylesheets/Productdisplay.module.css
@@ -77,7 +77,11 @@
     font-size: clamp(1rem, 0.6vw + 0.6rem, 1.3rem);
     height:2rem;
     padding-bottom:0.5rem;
+    overflow: hidden;
     text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
 }
 
 .product p{
